src/main/java/com/example/library_application/validation/ValidationMessage.java
package com.example.library_application.validation;

public class ValidationMessage {
    public static String NOT_FOUND_AUTHOR_MESSAGE = "AUTHOR WAS NOT FOUND, WITH PARAMETERS: ";
    public static String NOT_FOUND_BOOK_MESSAGE = "BOOK WAS NOT FOUND, WITH PARAMETERS: ";
}
