src/main/java/com/example/library_application/errors/Message.java
package com.example.library_application.errors;



public class Message {
    public static final String BOOK_NOT_FOUND_MESSAGE = "BOOK IS NOT FOUND!";
    public static final String READER_NOT_FOUND_MESSAGE = "READER IS NOT FOUND!";
    public static final String BOOK_NOT_RETURNED_MESSAGE = "BOOK WAS NOT RETURNED!";
    public static final String ADMIN_NOT_CREATED_MESSAGE = "THIS ADMIN WAS NEVER CREATED!";
    public static final String LIBRARY_CONTROLLER_NOT_RETURNED_MESSAGE = "LIBRARY CONTROLLER IS NOT RETURNED!";
    public static final String LIBRARY_CONTROLLER_NOT_FOUND_MESSAGE = "LIBRARY CONTROLLER IS NOT RETURNED!";
    public static final String ROOTS_NOT_ALLOWED_MESSAGE = "YOU HAVE NO SUCH RIGHTS!";

}
